--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 
   <meta charset="utf-8">
-  <meta author="Dora">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>魔法サイト v2.0</title>
+  <title>魔法サイト</title>
   <meta property="og:title" content="魔法サイト">
   <meta name="description" content="魔法の世界、そしてアートの世界へ。">
-  <meta name="keywords" content="魔法, 魔法サイト, アート, アートサイト, ART, ART SITE, MAHOU, MAHOU SITE, MAGIC, MACIC SITE"/>
-  <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <meta property="og:title" content="魔法サイト v2.0">
+  <meta property="og:title" content="魔法サイト">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.mahou.site">
-  <meta property="og:image" href="https://www.mahou.site/img/pr_1.jpg">
-  <meta property="og:site_name" content="魔法サイト v2.0">
+  <meta property="og:url" content="https://neko7sora.github.io/Mahou-site/">
+  <meta property="og:image" href="https://neko7sora.github.io/Mahou-site/img/pr_1.jpg">
+  <meta property="og:site_name" content="魔法サイト">
   <meta property="og:description" content="魔法の世界、そしてアートの世界へ。">
   <meta property="og:locale" content="ja_JP">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://www.mahou.site/img/pr_1.jpg">
-  <meta property="og:image:secure_url" content="https://www.mahou.site/img/pr_1.jpg" />
+  <meta name="twitter:image" content="https://neko7sora.github.io/Mahou-site/img/pr_1.jpg">
+  <meta property="og:image:secure_url" content="https://neko7sora.github.io/Mahou-site/img/pr_1.jpg" />
   <meta property="og:image:alt" content="You can see beautiful builings and natures" />
   <meta name="theme-color" content="#c528ff">
   <meta name="msapplication-TileColor" content="#c528ff">
-  <meta name="msapplication-TileImage" content="https://www.mahou.site/img/favicon.png">
+  <meta name="msapplication-TileImage" content="https://neko7sora.github.io/Mahou-site/img/favicon.png">
 
   <link rel="shortcut icon" href="img/favicon.png" />
-  <link rel="apple-touch-icon" href="https://www.mahou.site/img/favicon.png">
+  <link rel="apple-touch-icon" href="https://neko7sora.github.io/Mahou-site/img/favicon.png">
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/cssAdditional.css">
@@ -57,26 +54,9 @@
 			イドしたほうが魔法らしくなります。
 		</p>
 	</div>
-    <div class="home__telephone v-text_opacity">
-    </div>
-    <ul class="home__list">
-    </ul>
-
-    <div class="home__developing v-text_opacity">
-      <p>
-    【このサイトについて】<br>
-    このサイトは、Veulxが暇つぶしで作った魔法サイト<br>
-    です。魔法が出るだけのサイトですが、楽しん<br>
-    でいてもらえると嬉しいです。少し中毒性<br>
-    があります。このサイトでは、Javascript<br>
-    を含むページの描画時間を短縮をする<br>
-    ためにRocket Loader™を採用<br>
-    しています。
-     </p>
-    </div>
 
     <div class="home__see">
-      <a href="https://www.veulx.net/" class="line" target=_blank>Made by Veulx</a>
+      <a href="https://github.com/Neko7sora/Mahou-site" class="line" target=_blank>Github</a>
     </div>
 
   <div class="home__email">
